--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-query": "^3.25.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -40,6 +41,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL",
+      "CLIENT_KEY"
     ]
   }
 }
