--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
+    "faker": "^5.5.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
