--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.22.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
